fix images/nav link/overflow issues and implement swiping through e-zine carousel

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -86,3 +86,9 @@
   margin: 0 5px;
   cursor: pointer;
 }
+
+@media screen and (max-width: 940px) {
+  .slide img {
+    height: 600px;
+  }
+}
