--- a/src/components/NavHeader/Header.css
+++ b/src/components/NavHeader/Header.css
@@ -18,6 +18,7 @@ header {
   
   .nav-area {
     display: flex;
+    overflow-x: hidden;
   }
   
   
